# DualContouring

./: Cargo.toml  info.txt
assets/shaders/: adaptivity.wgsl  bindings.wgsl  contour.wgsl  sdf.wgsl
src/: camera.rs  cases.rs  editor.rs  gen.py  lol.rs  main.rs  shader.rs
